Update OrganizationEntityConverter.java